[package]
edition      = "2024"
name         = "co2-meter"
rust-version = "1.94"
version      = "0.1.0"

[[bin]]
name = "co2-meter"
path = "./src/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "auto"] }
itoa = "1.0.17"
num = { version = "0.4.3", default-features = false }
scd4x = "0.4.1"
ssd1306 = "0.10.0"
tinybmp = "0.7.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
